5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1789_3139.log
== TEST (2019-05-29 19:16:36) 
-- CODE:
from numpy import*
v= array(eval/input())
i=0
a=size(v)
c=0
while(i !>a):
	c=c+v[1]
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
File "XXXX", line 6
    while(i !>a):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:17:03) 
-- CODE:
from numpy import*
v= array(eval/input())
i=0
a=size(v)
c=0
while(i !> a):
	c=c+v[1]
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
File "XXXX", line 6
    while(i !> a):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:17:37) 
-- CODE:
from numpy import*
v= array(eval/input())
i=0
a=size(v)
c=0
while(i !> a):
	c=c+v[1]
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
File "XXXX", line 6
    while(i !> a):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:19:05) 
-- CODE:
from numpy import*
v= array(eval/input())
i=0
a=size(v)
c=0
while(i !> a):
	c=c+v[1]**3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
File "XXXX", line 6
    while(i !> a):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:20:44) 
-- CODE:
from numpy import*
v= array(eval/input())
i=0
a=size(v)
c=0
while(i !> a):
	c=c+v[1]**1/3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
File "XXXX", line 6
    while(i !> a):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:17) 
-- CODE:
from numpy import*
v= array(eval/input())
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**1/3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:01) 
-- CODE:
from numpy import*
v= array(eval/input("numeros positivos"))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**1/3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:23:22) 
-- CODE:
from numpy import*
v= array(eval/input("numeros positivos"))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**1/3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:24:18) 
-- CODE:
from numpy import*
v= array(eval/input("n numeros positivos"))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**1/3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:06) 
-- CODE:
from numpy import*
v= array(eval/input("n numeros positivos"))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**(1/3)
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:26:12) 
-- CODE:
from numpy import*
v= array(eval/input("n numeros positivos"))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**(1/3)
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:26:28) 
-- CODE:
from numpy import*
v= array(eval(input("n numeros positivos")))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**(1/3)
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:08) 
-- CODE:
from numpy import*
v= array(eval(input("n numeros positivos")))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**0.3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:33:50) 
-- CODE:
from numpy import*
v= array(eval(input("n numeros positivos")))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**1/3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:38:54) 
-- CODE:
from numpy import*
v= array(eval(input("n numeros positivos")))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:39:34) 
-- CODE:
from numpy import*
v= array(eval(input("n numeros positivos")))
i=0
a=size(v)
c=0
while(i < a):
	c=c+v[1]**3
	i=i+1
g= (c/a)**2	 
print(round,(g,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
